--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -68,7 +68,7 @@ body {
   // }
   .router-link-active:hover{
     background-color:white ;
-    color: #FFA500;
+    color: #8e2de2 ;
   }
 
   .btn-primary{
