--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,7 +11,7 @@ body {
   @import "./components/cursor";
   @import "./components/button";
   .bg-card-0{
-    background: linear-gradient(to right, #60ad4c, #20a5a9, #069fc9);
+    background-image: linear-gradient(to right, #8e2de2, #4a00e0);
   }
   .bg-card-1{
   background: linear-gradient(45deg, #ff0000, #ff9900);
